# cargo-patch

./: Cargo.toml
src/: main.rs
