[package]
name = "cargo-patch"
version = "0.1.12"
authors = ["Marc Mettke <marc@itmettke.de>"]
edition = "2021"
description = "Cargo Subcommand for patching dependencies using patch files"
license-file = "LICENSE"
repository = "https://github.com/mettke/cargo-patch"
readme = "README.md"
keywords = ["cargo", "patch", "dependency", "dependencies", "patchfile"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
cargo = {git = "https://github.com/rust-lang/cargo"}
failure = "0.1"
fs_extra = "1.2"
patch = "0.6"
semver = "1.0"
toml_edit =  { version = "0.13.4", features = ["serde", "easy"] }

[dev-dependencies]
cargo-test-macro = { git = "https://github.com/rust-lang/cargo.git" }
cargo-test-support = { git = "https://github.com/rust-lang/cargo.git" }
